# IMG-2-TEXT

./: README.md  app.py  packages.txt  pyproject.toml  setup.sh
